# support

dnsfcli/: .gitignore  CHANGELOG.md  LICENSE  README.md  dnsfcli.py  pyproject.toml
dnsfcli/docs/: dnsfcli-command-reference.confluence.xhtml  dnsfcli-command-reference.docx  dnsfcli-command-reference.md  dnsfcli-full-reference.confluence.xhtml  dnsfcli-full-reference.docx  dnsfcli-full-reference.md  dnsfcli-reference.confluence.xhtml  dnsfcli-reference.docx  dnsfcli-reference.md  dnsfcli.md
dnsfcli/examples/: README.md  agent-coverage-gap.sh  block-domains-from-feed.sh  bulk-onboard-networks.sh  ci-config-guardrails.sh  cleanup-stale-agents.sh  clone-policy.sh  emergency-permissive-mode.sh  export-org-inventories.sh  fleet-safesearch-audit.sh  incident-domain-triage.sh  rotate-api-key.sh  sync-blocklist-from-csv.sh  watch-agent-health.sh  weekly-threat-report.sh
dnsfcli/scripts/: build_command_reference.py  build_full_reference.py  build_guide.py  flags_reference.py  real_output_v2.json  run_build.py
dnsfcli/src/dnsfcli/: __init__.py  __main__.py  apps.py  audit.py  auth.py  batch.py  cache.py  cli.py  client.py  cliopts.py  cliparams.py  config.py  csv_io.py  endpoints.py  jobs.py  output.py  pagination.py  postprocess.py  preview.py  runopts.py
dnsfcli/src/dnsfcli/commands/: __init__.py  alias.py  audit.py  auth.py  cache.py  config.py  diff.py  history.py  misc.py
dnsfcli/tests/: conftest.py  test_alias_secret_scrub.py  test_audit_pass.py  test_batch_stop.py  test_cache_scope.py  test_cli_routing.py  test_client_retry.py  test_csv_io.py  test_endpoint_registry.py  test_exec_injection.py  test_final_audit.py  test_live.py  test_medium_hardening.py  test_output.py  test_pagination_lookups.py  test_rate_limiter.py  test_review_c.py  test_review_fixes.py  test_review_fixes_2.py  test_routing_smoke.py  test_seams_and_scrub.py  test_transform_sandbox.py
dnsfcli/tests/characterization/: cases.py  fixtures.py  harness.py  test_characterization.py
dnsfcli/tests/characterization/snapshots/: add_field.txt  all_count.txt  (+58 more)
(+17 files in other folders)
