[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnsfcli"
version = "0.2.0"
description = "CLI tool for the DNSFilter API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DNSFilter Engineering", email = "engineering@dnsfilter.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Utilities",
]
keywords = ["dnsfilter", "dns", "api", "cli", "security"]
dependencies = [
    "typer>=0.12,<1.0",
    # click is imported directly (dynamic command routing); Typer >= 0.26 no
    # longer depends on it, so it must be declared explicitly.
    "click>=8,<9",
    "httpx>=0.27,<1.0",
    "keyring>=24,<26",
    "rich>=13,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pip-audit>=2,<3",
]

[project.urls]
Homepage = "https://www.dnsfilter.com"
Repository = "https://github.com/DNSFilter/support"
Documentation = "https://github.com/DNSFilter/support/tree/main/dnsfcli#readme"
"Bug Tracker" = "https://github.com/DNSFilter/support/issues"

[project.scripts]
dnsfcli = "dnsfcli.cli:app_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/dnsfcli"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "live: requires a live DNSFilter API token and network access",
]
